--- a/firebase-process/package.json
+++ b/firebase-process/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^5.6.0"
+    "firebase-admin": "^5.6.0",
+    "node-dht-sensor": "0.0.33"
   }
 }
