--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "node-dht-sensor": "0.0.33",
     "socket.io": "^2.0.4",
     "sqlite3": "^3.1.13"
   }
